--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30sp"
@@ -21,5 +21,12 @@
         android:textSize="20sp"
         android:layout_margin="10dp"
         android:text="Mensagens pré-definidas" />
+    <Button
+        android:id="@+id/button_new_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_margin="10dp"
+        android:text="Digitar nova mensagem" />
 
 </LinearLayout>
