--- a/app/src/main/res/layout/activity_defined_messages.xml
+++ b/app/src/main/res/layout/activity_defined_messages.xml
@@ -8,8 +8,10 @@
 
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:padding='30dp'
+    android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:columnCount="1"
     android:rowCount="3"
     tools:context=".DefinedMessagesActivity">
@@ -23,6 +25,7 @@
 
     <Spinner
         android:id="@+id/spinner_messages"
+        android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -35,6 +38,7 @@
     <EditText
         android:id="@+id/text_phone"
         android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:hint="Telefone"
         android:inputType="phone" />
 
