--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,13 +7,16 @@
     android:layout_gravity="center_vertical"
     android:columnCount="1"
     android:rowCount="3"
+    android:padding="30dp"
     tools:context=".DefinedMessagesActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/text_phone"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:focusedByDefault="true"
+        android:layout_marginBottom="50dp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         android:hint="Mensagem"
         android:inputType="phone" />
 
@@ -30,18 +31,25 @@
             android:id="@+id/dash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:textSize="20sp"
             android:text="dash" />
 
         <Button
             android:id="@+id/space"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:textSize="20sp"
             android:text="espaço" />
 
         <Button
             android:id="@+id/dot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textSize="20sp"
             android:text="dot" />
     </LinearLayout>
 
@@ -50,12 +58,20 @@
         android:id="@+id/backspace"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:textSize="20sp"
         android:text="apagar" />
 
     <Button
         android:id="@+id/enviar"
         android:layout_width="match_parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
         android:text="Enviar" />
 
 </GridLayout>
