--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -9,7 +9,7 @@
     android:layout_gravity="center_vertical"
     android:columnCount="1"
     android:rowCount="3"
-    tools:context=".DefinedMessagesActivity">
+    tools:context=".NewMessage">
 
     <EditText
         android:id="@+id/text_phone"
@@ -26,12 +26,20 @@
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
         tools:context=".MainActivity">
+
         <Button
             android:id="@+id/dash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="dash" />
 
+
+        <Button
+            android:id="@+id/slash"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="slash" />
+        
         <Button
             android:id="@+id/space"
             android:layout_width="match_parent"
@@ -43,6 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="dot" />
+
+
     </LinearLayout>
 
 
