--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:columnCount="1"
     android:rowCount="3"
-    tools:context=".DefinedMessagesActivity">
+    tools:context=".SendMessage">
 
 
     <EditText
