--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,13 @@
 <resources>
 
     <!-- Base application theme. -->
+    <style name="SpinnerTheme">
+        <!-- Customize your theme here. -->
+        <item name="android:textColor">#333333</item>
+        <item name="android:fontFamily">@font/product_sans</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
