--- a/app/src/main/res/layout/activity_defined_messages.xml
+++ b/app/src/main/res/layout/activity_defined_messages.xml
@@ -2,8 +2,8 @@
 
 <!--
   GridLayout é um layout bem conveniente para
-  organizar as telas por grade. Neste exemplo,
-  temos uma com duas linhas e duas colunas.
+    organizar as telas por grade. Neste exemplo,
+    temos uma com duas linhas e duas colunas.
 -->
 
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -28,30 +28,23 @@
         android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5pt"
-        android:layout_marginTop="5pt"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="5dp"
         android:backgroundTint="#d9d9d9"
         android:entries="@array/messages"
         android:theme="@style/SpinnerTheme"
         />
 
-    <!--
-      Repare que podemos usar o atributo inputType para
-      dizer especificamente que este campo é número de
-      telefone. Isso é ótimo para usabilidade, pois faz
-      com que o teclado fique restrito apenas a números.
-    -->
-    <EditText
-        android:id="@+id/text_phone"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:hint="Telefone"
-        android:inputType="phone" />
-
     <Button
-        android:id="@+id/button_send"
+        android:id="@+id/enviar"
         android:layout_width="match_parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_height="wrap_content"
-        android:text="Enviar para o cuidador" />
+        android:textSize="20sp"
+        android:text="Escolher destinatário" />
+
+
 
 </GridLayout>
