--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:text="slash" />
-        
+
         <Button
             android:id="@+id/space"
             android:layout_width="match_parent"
@@ -79,6 +79,6 @@
         android:layout_marginLeft="30dp"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="Enviar" />
+        android:text="Escolher destinatário" />
 
 </GridLayout>
