--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -10,7 +10,7 @@
     tools:context=".NewMessage">
 
     <TextView
-        android:id="@+id/text_phone"
+        android:id="@+id/text_message"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginBottom="50dp"
