--- a/app/src/main/res/layout/activity_defined_messages.xml
+++ b/app/src/main/res/layout/activity_defined_messages.xml
@@ -8,11 +8,11 @@
 
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding='30dp'
-    android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:columnCount="1"
+    android:padding='30dp'
     android:rowCount="3"
     tools:context=".DefinedMessagesActivity">
 
@@ -25,25 +25,24 @@
 
     <Spinner
         android:id="@+id/spinner_messages"
-        android:textSize="20sp"
-        android:spinnerMode="dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="#d9d9d9"
         android:entries="@array/messages"
-        android:theme="@style/SpinnerTheme"
-        />
+        android:spinnerMode="dialog"
+        android:textSize="20sp"
+        android:theme="@style/SpinnerTheme" />
 
     <Button
         android:id="@+id/enviar"
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Escolher destinatário"
         android:textSize="20sp"
-        android:text="Escolher destinatário" />
-
+        tools:ignore="HardcodedText" />
 
 
 </GridLayout>
