--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:padding="30dp"
     android:orientation="vertical"
+    android:padding="30dp"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Selecione o tipo de mensagem que deseja enviar:"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:layout_marginBottom="10dp"
-        android:text="Selecione o tipo de mensagem que deseja enviar:" />
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button_defined_messages"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="Mensagens pré-definidas" />
+        android:layout_marginBottom="10dp"
+        android:text="Mensagens pré-definidas"
+        android:textSize="20sp"
+        tools:ignore="HardcodedText" />
+
     <Button
         android:id="@+id/button_new_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:text="Digitar nova mensagem" />
+        android:layout_marginBottom="10dp"
+        android:text="Digitar nova mensagem"
+        android:textSize="20sp"
+        tools:ignore="HardcodedText" />
 
 </LinearLayout>
