--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -41,28 +41,32 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="/"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/space"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Espaço"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/dash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="-"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/dot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="."
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="ButtonStyle,HardcodedText" />
 
 
     </LinearLayout>
@@ -74,7 +78,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="apagar"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/enviar"
@@ -82,6 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="Escolher destinatário"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        tools:ignore="HardcodedText" />
 
 </GridLayout>
