--- a/app/src/main/res/layout/activity_defined_messages.xml
+++ b/app/src/main/res/layout/activity_defined_messages.xml
@@ -25,8 +25,9 @@
 
     <Spinner
         android:id="@+id/spinner_messages"
-        android:textSize="20sp"
-        android:spinnerMode="dialog"
+        android:spinnerMode="dropdown"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
@@ -43,7 +44,5 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="Escolher destinatário" />
-
-
 
 </GridLayout>
