--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="android:textColor">#333333</item>
         <item name="android:fontFamily">@font/product_sans</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">22sp</item>
     </style>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
