--- a/app/src/main/res/layout/activity_defined_messages.xml
+++ b/app/src/main/res/layout/activity_defined_messages.xml
@@ -26,7 +26,6 @@
     <Spinner
         android:id="@+id/spinner_messages"
 
-        android:spinnerMode="dropdown"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:layout_width="match_parent"
@@ -45,9 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Escolher destinatário"
-        android:textSize="20sp"
-        android:text="Escolher destinatário" />
-        tools:ignore="HardcodedText" />
+        android:textSize="20sp"/>
 
 
 </GridLayout>
