--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -10,12 +10,10 @@
     android:rowCount="3"
     tools:context=".NewMessage">
 
-
     <TextView
         android:id="@+id/preview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
         android:textAlignment="center"
         android:textSize="20sp" />
 
@@ -23,7 +21,6 @@
         android:id="@+id/text_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -41,14 +38,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="/"
-            android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
-
-        <Button
-            android:id="@+id/space"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Espaço"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
@@ -72,22 +61,54 @@
     </LinearLayout>
 
 
-    <Button
-        android:id="@+id/backspace"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="apagar"
-        android:textSize="20sp"
-        tools:ignore="HardcodedText" />
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
+        tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/enviar"
-        android:layout_width="match_parent"
+        <Button
+            android:id="@+id/backspace"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="apagar"
+            android:textSize="20sp"
+            tools:ignore="HardcodedText" />
+
+        <Button
+            android:id="@+id/space"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Espaço"
+            android:textSize="20sp"
+            tools:ignore="ButtonStyle,HardcodedText" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="Escolher destinatário"
-        android:textSize="20sp"
-        tools:ignore="HardcodedText" />
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
+        tools:context=".MainActivity">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Voltar"
+            android:textSize="20sp"
+            tools:ignore="ButtonStyle,HardcodedText" />
+
+        <Button
+            android:id="@+id/enviar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Destinatário"
+            android:textSize="20sp"
+            tools:ignore="ButtonStyle,HardcodedText" />
+
+    </LinearLayout>
+
 
 </GridLayout>
