--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -95,9 +95,10 @@
         tools:context=".MainActivity">
 
         <Button
+            android:id="@+id/back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Voltar"
+            android:text="voltar"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
@@ -110,6 +111,5 @@
             tools:ignore="ButtonStyle,HardcodedText" />
 
     </LinearLayout>
-
 
 </GridLayout>
