--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@android:color/background_light"
+    android:backgroundTint="#FFFFFF"
     android:orientation="vertical"
     android:padding="30dp"
     android:visibility="visible"
@@ -20,17 +21,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Selecione o tipo de mensagem"
+        android:background="#FFFFFF"
+        android:text="Selecione sua preferência"
         android:textAlignment="center"
         android:textSize="24sp"
-        android:textStyle="bold"
+        android:textStyle="normal|bold"
+        android:layout_marginBottom="10dp"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button_defined_messages"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:backgroundTint="#E5E5E5"
         android:text="Mensagens pré-definidas"
         android:textSize="20sp"
         tools:ignore="HardcodedText" />
@@ -39,6 +42,9 @@
         android:id="@+id/button_new_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="#E5E5E5"
+        android:focusableInTouchMode="false"
+        android:foregroundTint="#FFFFFF"
         android:text="Digitar nova mensagem"
         android:textSize="20sp"
         tools:ignore="HardcodedText" />
