--- a/app/src/main/res/layout/activity_defined_messages.xml
+++ b/app/src/main/res/layout/activity_defined_messages.xml
@@ -48,6 +48,7 @@
         tools:ignore="HardcodedText" />
 
     <Button
+        android:id="@+id/back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Voltar"
