--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -3,7 +3,7 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
     android:columnCount="1"
     android:padding="30dp"
@@ -15,7 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:layout_marginTop="15dp"
+        android:textStyle="bold"
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/text_message"
@@ -23,6 +25,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:layout_marginTop="15dp"
         android:textStyle="bold" />
 
 
@@ -31,11 +34,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
+        android:layout_marginTop="15dp"
         tools:context=".MainActivity">
 
         <Button
             android:id="@+id/slash"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="/"
             android:textSize="20sp"
@@ -43,7 +47,7 @@
 
         <Button
             android:id="@+id/dash"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="-"
             android:textSize="20sp"
@@ -66,12 +70,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
+        android:layout_marginTop="15dp"
         tools:context=".MainActivity">
 
         <Button
             android:id="@+id/backspace"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="apagar"
             android:textSize="20sp"
             tools:ignore="HardcodedText" />
@@ -91,11 +96,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
+        android:layout_marginTop="15dp"
         tools:context=".MainActivity">
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="Voltar"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
