--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_vertical"
-    android:layout_marginBottom="90dp"
-    android:columnCount="1"
-    android:padding="30dp"
-    android:rowCount="3"
+    android:orientation="vertical"
     tools:context=".NewMessage">
 
     <TextView
@@ -16,32 +12,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:textSize="25sp"
         android:layout_marginTop="15dp"
-        android:textStyle="bold"
-        android:textSize="25sp" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="20sp"
         android:layout_marginTop="15dp"
+        android:textAlignment="center"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <GridLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="horizontal"
+        android:layout_gravity="center"
         android:layout_marginTop="15dp"
-        tools:context=".MainActivity">
+        android:columnCount="3"
+        android:rowCount="1"
+        tools:context=".NewMessage">
 
         <Button
             android:id="@+id/slash"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="/"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
@@ -49,73 +45,73 @@
         <Button
             android:id="@+id/dash"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="-"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/dot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="."
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
+    </GridLayout>
 
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <GridLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="horizontal"
+        android:layout_gravity="center"
         android:layout_marginTop="15dp"
-        tools:context=".MainActivity">
+        android:columnCount="2"
+        android:rowCount="1"
+        tools:context=".NewMessage">
 
         <Button
             android:id="@+id/backspace"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="apagar"
             android:textSize="20sp"
             tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/space"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Espaço"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
-    </LinearLayout>
+    </GridLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <GridLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="horizontal"
+        android:layout_gravity="center"
         android:layout_marginTop="15dp"
-        tools:context=".MainActivity">
+        android:columnCount="2"
+        android:rowCount="1"
+        tools:context=".NewMessage">
 
         <Button
             android:id="@+id/back"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Voltar"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/enviar"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Destinatário"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
-    </LinearLayout>
+    </GridLayout>
 
-</GridLayout>
+</LinearLayout>
