--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -1,80 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
     android:padding="30sp"
     tools:context=".NewMessage">
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:text="Tradutor"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textStyle="normal|bold"
+        tools:ignore="HardcodedText" />
+
+    <view
+        android:id="@+id/view"
+        class="androidx.appcompat.widget.ActionMenuView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
         android:id="@+id/preview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
+        android:background="#76FF03"
+        android:padding="5sp"
         android:textAlignment="center"
         android:textSize="25sp"
-        android:layout_marginTop="15dp"
-        android:textStyle="bold" />
+        android:textStyle="bold|italic" />
 
     <TextView
         android:id="@+id/text_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10sp"
+        android:padding="5sp"
+        android:background="#76FF03"
         android:textAlignment="center"
         android:textSize="25sp"
         android:textStyle="bold" />
 
-    <GridLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:columnCount="3"
-        android:rowCount="1"
-        tools:context=".NewMessage">
+        android:layout_marginTop="10sp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/slash"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#D7DAD7"
             android:text="/"
+            android:layout_marginRight="2.5sp"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/dash"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#D7DAD7"
             android:text="-"
+            android:layout_marginRight="2.5sp"
+            android:layout_marginLeft="2.5sp"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/dot"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#D7DAD7"
             android:text="."
+            android:layout_marginLeft="2.5sp"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
+    </LinearLayout>
 
-    </GridLayout>
-
-    <GridLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="15dp"
-        android:columnCount="2"
-        android:rowCount="1"
-        tools:context=".NewMessage">
+        android:layout_marginTop="10sp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/backspace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#D7DAD7"
             android:text="apagar"
+            android:layout_marginRight="2.5sp"
             android:textSize="20sp"
             tools:ignore="HardcodedText" />
 
@@ -82,26 +109,27 @@
             android:id="@+id/space"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Espaço"
+            android:layout_weight="1"
+            android:background="#D7DAD7"
+            android:text="espaço"
+            android:layout_marginLeft="2.5sp"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
+    </LinearLayout>
 
-    </GridLayout>
-
-    <GridLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:columnCount="2"
-        android:rowCount="1"
-        tools:context=".NewMessage">
+        android:layout_marginTop="10sp">
 
         <Button
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Voltar"
+            android:layout_weight="1"
+            android:background="#D7DAD7"
+            android:text="voltar"
+            android:layout_marginRight="2.5sp"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
@@ -109,10 +137,12 @@
             android:id="@+id/enviar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Destinatário"
+            android:layout_weight="1"
+            android:background="#D7DAD7"
+            android:text="destinatário"
+            android:layout_marginLeft="2.5sp"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
-
-    </GridLayout>
+    </LinearLayout>
 
 </LinearLayout>
