--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,24 +15,26 @@
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
-        android:layout_height="190dp"
+        android:layout_height="174dp"
         app:srcCompat="@drawable/logo1" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
         android:background="#FFFFFF"
         android:text="Selecione sua preferência"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="normal|bold"
+        android:textColor="#000000"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button_defined_messages"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#D7DAD7"
+        android:layout_marginTop="10sp"
         android:text="Mensagens pré-definidas"
         android:textSize="20sp"
         tools:ignore="HardcodedText" />
@@ -41,7 +43,9 @@
         android:id="@+id/button_new_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#D7DAD7"
         android:focusableInTouchMode="false"
+        android:layout_marginTop="10sp"
         android:text="Digitar nova mensagem"
         android:textSize="20sp"
         tools:ignore="HardcodedText" />
