--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -15,8 +15,9 @@
         android:background="#FFFFFF"
         android:text="Tradutor"
         android:textAlignment="center"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="normal|bold"
+        android:textColor="#000000"
         tools:ignore="HardcodedText" />
 
     <view
