--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -41,12 +41,14 @@
         android:id="@+id/text_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Digite em morse"
         android:layout_marginTop="10sp"
-        android:padding="5sp"
+        android:padding="7.5sp"
         android:background="#76FF03"
+        android:textColor="#000000"
         android:textAlignment="center"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:textSize="20sp"
+        android:textStyle="italic" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -127,10 +129,10 @@
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#D7DAD7"
-            android:text="voltar"
             android:layout_marginRight="2.5sp"
+            android:layout_weight="1"
+            android:background="#FF9100"
+            android:text="voltar"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
 
@@ -138,10 +140,10 @@
             android:id="@+id/enviar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="#D7DAD7"
-            android:text="destinatário"
             android:layout_marginLeft="2.5sp"
+            android:layout_weight="1"
+            android:background="#FFEA00"
+            android:text="destinatário"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
     </LinearLayout>
