--- a/app/src/main/res/layout/activity_defined_messages.xml
+++ b/app/src/main/res/layout/activity_defined_messages.xml
@@ -1,53 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:columnCount="1"
-    android:padding='30dp'
-    android:rowCount="3"
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:orientation="vertical"
+    android:padding="30sp"
     tools:context=".DefinedMessagesActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Selecione a mensagem"
-        android:textStyle="bold"
-        android:textAlignment="viewStart"
-        android:textSize="24sp"
-        tools:ignore="HardcodedText" />
+        android:orientation="vertical">
 
-    <Spinner
-        android:id="@+id/spinner_messages"
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            android:text="Selecione a mensagem"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:textStyle="normal|bold"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="136dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="137dp"
+            app:srcCompat="@drawable/cel" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:backgroundTint="#d9d9d9"
-        android:entries="@array/messages"
-        android:spinnerMode="dropdown"
-        android:textSize="20sp"
-        android:theme="@style/SpinnerTheme"
-        tools:ignore="ObsoleteLayoutParam" />
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/enviar"
+        <Spinner
+            android:id="@+id/spinner_messages"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:backgroundTint="#d9d9d9"
+            android:entries="@array/messages"
+            android:spinnerMode="dropdown"
+            android:textSize="20sp"
+            android:theme="@style/SpinnerTheme"
+            tools:ignore="ObsoleteLayoutParam" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Escolher destinatário"
-        android:textSize="20sp"
-        tools:ignore="HardcodedText" />
+        android:layout_marginTop="10sp"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/back"
+        <Button
+            android:id="@+id/enviar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#D7DAD7"
+            android:text="escolher destinatário"
+            android:textSize="20sp"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Voltar"
-        android:textSize="20sp"
-        tools:ignore="ButtonStyle,HardcodedText" />
+        android:layout_marginTop="10sp"
+        android:orientation="vertical">
 
-</GridLayout>
+        <Button
+            android:id="@+id/back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#D7DAD7"
+            android:text="voltar"
+            android:textSize="20sp"
+            tools:ignore="ButtonStyle,HardcodedText" />
+    </LinearLayout>
+
+</LinearLayout>
