--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -19,7 +19,7 @@
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/download" />
+            app:srcCompat="@drawable/message" />
     </LinearLayout>
 
     <LinearLayout
@@ -127,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="2.5sp"
             android:layout_weight="1"
-            android:background="#FF9100"
+            android:background="#D7DAD7"
             android:text="voltar"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
@@ -138,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2.5sp"
             android:layout_weight="1"
-            android:background="#FF9100"
+            android:background="#D7DAD7"
             android:text="enviar"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
