--- a/app/src/main/res/layout/simple_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/simple_spinner_dropdown_item.xml
@@ -8,6 +8,8 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:ellipsize="marquee"
     android:singleLine="true"
+    android:textAlignment="center"
+    android:background="#76FF03"
     android:textColor="#aa66cc"
     android:textSize="22sp"
     tools:ignore="UnusedResources" />
