--- a/app/src/main/res/layout/simple_spinner_item.xml
+++ b/app/src/main/res/layout/simple_spinner_item.xml
@@ -5,8 +5,9 @@
     style="?android:attr/spinnerItemStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:textAlignment="center"
     android:ellipsize="marquee"
     android:singleLine="true"
+    android:background="#76FF03"
     android:textSize="22sp"
     android:textStyle="bold" />
-
