--- a/app/src/main/res/layout/activity_defined_messages.xml
+++ b/app/src/main/res/layout/activity_defined_messages.xml
@@ -7,7 +7,8 @@
     android:background="#FFFFFF"
     android:orientation="vertical"
     android:padding="30sp"
-    tools:context=".DefinedMessagesActivity">
+    tools:context=".DefinedMessagesActivity"
+    tools:ignore="Overdraw">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,7 +36,9 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="137dp"
-            app:srcCompat="@drawable/cel" />
+            android:contentDescription="TODO"
+            app:srcCompat="@drawable/cel"
+            tools:ignore="ContentDescription,HardcodedText" />
     </LinearLayout>
 
     <LinearLayout
