--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,9 @@
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="174dp"
-        app:srcCompat="@drawable/logo1" />
+        android:contentDescription="TODO"
+        app:srcCompat="@drawable/logo1"
+        tools:ignore="ContentDescription,HardcodedText" />
 
     <TextView
         android:layout_width="match_parent"
@@ -49,10 +51,5 @@
         android:text="Digitar nova mensagem"
         android:textSize="20sp"
         tools:ignore="HardcodedText" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
 
 </LinearLayout>
