--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -34,7 +34,8 @@
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:ignore="HardcodedText" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -75,7 +76,7 @@
             android:background="#D7DAD7"
             android:text="&#8226;"
             android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
     </LinearLayout>
 
@@ -96,7 +97,7 @@
             android:background="#D7DAD7"
             android:text="apagar"
             android:textSize="20sp"
-            tools:ignore="HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
         <Button
             android:id="@+id/space"
@@ -107,7 +108,7 @@
             android:background="#D7DAD7"
             android:text="espaço"
             android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
     </LinearLayout>
 
     <TextView
@@ -135,7 +136,7 @@
             android:background="#D7DAD7"
             android:text="Romano/Morse"
             android:textSize="16sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
         <Button
             android:id="@+id/buttonMorseToChar"
@@ -146,7 +147,7 @@
             android:background="#D7DAD7"
             android:text="Morse/Romano"
             android:textSize="16sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
     </LinearLayout>
 
@@ -164,7 +165,7 @@
             android:background="#D7DAD7"
             android:text="voltar"
             android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
         <Button
             android:id="@+id/enviar"
@@ -175,7 +176,7 @@
             android:background="#D7DAD7"
             android:text="destinatário"
             android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
     </LinearLayout>
 
 </LinearLayout>
