--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -7,7 +7,8 @@
     android:background="#FFFFFF"
     android:orientation="vertical"
     android:padding="30sp"
-    tools:context=".SendMessage">
+    tools:context=".SendMessage"
+    tools:ignore="Overdraw">
 
 
     <LinearLayout
@@ -19,7 +20,9 @@
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            app:srcCompat="@drawable/message" />
+            android:contentDescription="TODO"
+            app:srcCompat="@drawable/message"
+            tools:ignore="ContentDescription,HardcodedText" />
     </LinearLayout>
 
     <LinearLayout
@@ -72,7 +75,7 @@
             android:background="#D7DAD7"
             android:text="/"
             android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
         <Button
             android:id="@+id/dash"
@@ -95,7 +98,7 @@
             android:background="#D7DAD7"
             android:text="."
             android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
     </LinearLayout>
 
     <LinearLayout
@@ -113,7 +116,7 @@
             android:background="#D7DAD7"
             android:text="apagar"
             android:textSize="20sp"
-            tools:ignore="HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
         <Button
             android:id="@+id/space"
@@ -124,15 +127,15 @@
             android:background="#D7DAD7"
             android:text="espaço"
             android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
     </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Dicionários"
         android:layout_marginTop="10sp"
+        android:text="Dicionários"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -153,7 +156,7 @@
             android:background="#D7DAD7"
             android:text="Romano/Morse"
             android:textSize="16sp"
-            tools:ignore="ButtonStyle,HardcodedText"/>
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
         <Button
             android:id="@+id/buttonMorseToChar"
@@ -164,7 +167,7 @@
             android:background="#D7DAD7"
             android:text="Morse/Romano"
             android:textSize="16sp"
-            tools:ignore="ButtonStyle,HardcodedText"/>
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
     </LinearLayout>
 
@@ -183,7 +186,7 @@
             android:background="#D7DAD7"
             android:text="voltar"
             android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
 
         <Button
             android:id="@+id/button_send"
@@ -194,7 +197,7 @@
             android:background="#D7DAD7"
             android:text="enviar"
             android:textSize="20sp"
-            tools:ignore="ButtonStyle,HardcodedText" />
+            tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
     </LinearLayout>
 
     <Button
