--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -127,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="2.5sp"
             android:layout_weight="1"
-            android:background="#D7DAD7"
+            android:background="#A7DC68"
             android:text="Romano/Morse"
             android:textSize="16sp"
             tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
@@ -138,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2.5sp"
             android:layout_weight="1"
-            android:background="#D7DAD7"
+            android:background="#A7DC68"
             android:text="Morse/Romano"
             android:textSize="16sp"
             tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
@@ -155,7 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="2.5sp"
             android:layout_weight="1"
-            android:background="#D7DAD7"
+            android:background="#FEBD57"
             android:text="voltar"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
@@ -166,7 +166,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2.5sp"
             android:layout_weight="1"
-            android:background="#D7DAD7"
+            android:background="#FEBD57"
             android:text="destinatário"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
