--- a/app/src/main/res/layout/activity_morse_to_char.xml
+++ b/app/src/main/res/layout/activity_morse_to_char.xml
@@ -47,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
-        android:background="#D7DAD7"
+        android:background="#FEBD57"
         android:text="voltar"
         android:textSize="20sp"
         tools:ignore="ButtonStyle,HardcodedText" />
