--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -136,7 +136,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="2.5sp"
             android:layout_weight="1"
-            android:background="#D7DAD7"
+            android:background="#A7DC68"
             android:text="Romano/Morse"
             android:textSize="16sp"
             tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
@@ -147,7 +147,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2.5sp"
             android:layout_weight="1"
-            android:background="#D7DAD7"
+            android:background="#A7DC68"
             android:text="Morse/Romano"
             android:textSize="16sp"
             tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
@@ -165,7 +165,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="2.5sp"
             android:layout_weight="1"
-            android:background="#D7DAD7"
+            android:background="#FEBD57"
             android:text="voltar"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
@@ -176,7 +176,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2.5sp"
             android:layout_weight="1"
-            android:background="#D7DAD7"
+            android:background="#FEBD57"
             android:text="enviar"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText,RtlHardcoded" />
@@ -187,7 +187,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
-        android:background="#FFEA00"
+        android:background="#F95049"
         android:text="Enviar para o cuidador"
         android:textSize="20sp"
         tools:ignore="HardcodedText" />
